--- a/main.css
+++ b/main.css
@@ -268,15 +268,25 @@ header {
 .simplify {
   margin-top: 10rem;
   width: 100%;
-  background: url("./images/bg-tablet-pattern.svg") no-repeat 25% 10%,
-    url("./images/bg-tablet-pattern.svg") no-repeat 136% 120%;
-  background-size: 40%;
-  background-color: var(--brightRed);
+  background: var(--brightRed);
   display: flex;
   flex-direction: row;
   justify-content: space-around;
   align-items: center;
   color: white;
+  position: relative;
+}
+
+.simplify-background {
+  position: absolute;
+  background: url("./images/bg-tablet-pattern.svg") no-repeat 25% 11%,
+    url("./images/bg-tablet-pattern.svg") no-repeat 136% 120%;
+  background-size: 40%;
+  /* background-repeat: no-repeat; */
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+  opacity: 0.1;
 }
 
 .simplify .simplify-text {
