--- a/main.css
+++ b/main.css
@@ -101,7 +101,6 @@ header {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  /* background-color: aqua; */
   margin: auto;
 }
 
@@ -130,14 +129,12 @@ header {
 }
 
 .graphs {
-  /* background-color: pink; */
   width: 50%;
   margin-top: 5rem;
   text-align: right;
 }
 
-/* main section */
-
+/* Main section */
 /* Text-description section */
 
 .description {
@@ -282,7 +279,6 @@ header {
   background: url("./images/bg-tablet-pattern.svg") no-repeat 25% 11%,
     url("./images/bg-tablet-pattern.svg") no-repeat 136% 120%;
   background-size: 40%;
-  /* background-repeat: no-repeat; */
   width: 100%;
   height: 100%;
   opacity: 0.1;
@@ -417,4 +413,124 @@ input[type="email"] {
 
 .btn-no-shadow p {
   color: white;
+}
+
+@media only screen and (min-width: 1201px) and (max-width: 1366px) {
+  body {
+    background: url(/images/bg-tablet-pattern.svg) no-repeat 111% -2%,
+      url(/images/bg-tablet-pattern.svg) no-repeat -59% 55%;
+    background-size: 50%;
+  }
+
+  .text-description {
+    width: 55%;
+  }
+
+  .person {
+    padding: 0;
+  }
+
+  .person .person-desc {
+    margin: 1rem 1rem;
+  }
+
+  input[type="email"] {
+    padding: 5px 18px;
+    margin-right: 0.1rem;
+  }
+
+  .btn-no-shadow {
+    padding: 6px 19px;
+  }
+
+  .valid-email {
+    margin: 0.3rem 0 0 0.9rem;
+  }
+}
+
+@media only screen and (min-width: 1024px) and (max-width: 1200px) {
+  body {
+    background: url(/images/bg-tablet-pattern.svg) no-repeat 150% -5%,
+      url(/images/bg-tablet-pattern.svg) no-repeat -100% 55%;
+    background-size: 65%;
+  }
+
+  .btn {
+    padding: 5px 18px;
+    border-radius: 50px;
+  }
+
+  .navbar,
+  .header-top,
+  .description {
+    min-width: 90%;
+  }
+
+  .entry-information h1 {
+    font-size: 3rem;
+    line-height: 3.2rem;
+  }
+
+  .graphs {
+    width: 54%;
+  }
+
+  .graphs img {
+    width: 32rem;
+    height: 32rem;
+  }
+
+  .text-description {
+    width: 45%;
+  }
+
+  .list-description {
+    width: 51%;
+  }
+
+  .person {
+    width: 50%;
+  }
+
+  .person .person-desc {
+    margin: 1rem 1rem;
+  }
+
+  .simplify {
+    margin-top: 8rem;
+  }
+
+  .simplify-background {
+    position: absolute;
+    background: url("./images/bg-tablet-pattern.svg") no-repeat 18% 5%,
+      url("./images/bg-tablet-pattern.svg") no-repeat 143% 116%;
+    background-size: 42%;
+  }
+
+  .simplify .simplify-text {
+    font-size: 2rem;
+    width: 40%;
+    margin: 2rem 0;
+    line-height: 2.3rem;
+  }
+
+  .footer .lists {
+    margin-left: 0rem;
+  }
+  .contact {
+    width: 30%;
+  }
+
+  input[type="email"] {
+    padding: 5px 18px;
+    margin-right: 0.1rem;
+  }
+
+  .btn-no-shadow {
+    padding: 6px 19px;
+  }
+
+  .valid-email {
+    margin: 0.3rem 0 0 0.9rem;
+  }
 }
