--- a/main.css
+++ b/main.css
@@ -223,7 +223,7 @@ header {
 }
 
 .people-desc {
-  min-width: 100%;
+  width: 100%;
   display: flex;
   flex-wrap: nowrap;
   overflow-x: auto;
@@ -452,8 +452,8 @@ input[type="email"] {
 /* Media Query from 1024px to 1200px */
 @media only screen and (min-width: 1024px) and (max-width: 1200px) {
   body {
-    background: url(/images/bg-tablet-pattern.svg) no-repeat 150% -5%,
-      url(/images/bg-tablet-pattern.svg) no-repeat -100% 55%;
+    background: url(/images/bg-tablet-pattern.svg) no-repeat 160% -12%,
+      url(/images/bg-tablet-pattern.svg) no-repeat -115% 64%;
     background-size: 65%;
   }
 
@@ -534,5 +534,129 @@ input[type="email"] {
 
   .valid-email {
     margin: 0.3rem 0 0 0.9rem;
+  }
+}
+
+/* Media Query from 769px to 1023px */
+@media only screen and (min-width: 769px) and (max-width: 1023px) {
+  * {
+    font-size: 14px;
+  }
+
+  body {
+    background: url(/images/bg-tablet-pattern.svg) no-repeat 286% -9%,
+      url(/images/bg-tablet-pattern.svg) no-repeat -220% 55%;
+    background-size: 80%;
+  }
+
+  .btn {
+    padding: 5px 16px;
+    border-radius: 50px;
+  }
+
+  .navbar,
+  .header-top,
+  .description {
+    width: 100%;
+    justify-content: space-evenly;
+  }
+
+  #logo {
+    margin-top: 0.5rem;
+    width: 8rem;
+    height: 1.7rem;
+  }
+
+  .entry-information {
+    width: 45%;
+  }
+
+  .entry-information h1 {
+    font-size: 3rem;
+    line-height: 3rem;
+  }
+
+  .graphs {
+    width: 45%;
+    margin-top: 7rem;
+  }
+  .graphs img {
+    width: 27rem;
+    height: 27rem;
+  }
+
+  .description {
+    margin: 5.5rem auto;
+  }
+
+  .text-description {
+    width: 45%;
+  }
+
+  .text-description p {
+    width: 80%;
+  }
+
+  .list-description {
+    width: 47%;
+  }
+
+  .person {
+    width: 55%;
+  }
+
+  .person .person-desc {
+    margin: 1rem 3rem;
+  }
+
+  .simplify-background {
+    position: absolute;
+    background: url("./images/bg-tablet-pattern.svg") no-repeat 28% 15%,
+      url("./images/bg-tablet-pattern.svg") no-repeat 146% 123%;
+    background-size: 42%;
+  }
+
+  .simplify .simplify-text {
+    font-size: 2rem;
+    width: 40%;
+    margin: 3rem 0;
+    line-height: 2.3rem;
+  }
+
+  .footer .lists {
+    margin-left: 0rem;
+  }
+
+  .images {
+    width: 25%;
+  }
+
+  .contact {
+    width: 36%;
+  }
+
+  input[type="email"] {
+    padding: 5px 18px;
+    margin-right: 0.1rem;
+  }
+
+  .btn-no-shadow {
+    padding: 6px 19px;
+  }
+}
+
+/* Media Query from 769px to 768px */
+@media only screen and (min-width: 450px) and (max-width: 768px) {
+  * {
+    font-size: 14px;
+  }
+
+  .graphs {
+    width: 45%;
+    margin-top: 7rem;
+  }
+  .graphs img {
+    width: 27rem;
+    height: 27rem;
   }
 }
