--- a/main.css
+++ b/main.css
@@ -737,16 +737,21 @@ input[type="email"] {
 
   .people-desc {
     width: 70%;
-    scroll-snap-type: x mandatory;
-    scroll-behavior: smooth;
-    overflow-x: hidden;
+    height: 20rem;
+    flex: unset;
+    overflow: hidden;
+    position: relative;
   }
 
   .person {
-    scroll-snap-align: start;
+    position: absolute;
+    transition: transform 250ms ease-in-out;
+    flex: unset;
     width: 100%;
     height: 15rem;
-    margin: 5rem 0 1rem 0;
+    margin: 2rem 0 1rem 0;
+    top: 0;
+    bottom: 0;
   }
 
   .people-desc-sliders {
@@ -757,12 +762,15 @@ input[type="email"] {
     justify-content: space-between;
     align-items: center;
     margin-bottom: 4rem;
+    margin-top: 1rem;
   }
 
-  .people-desc-sliders > a {
+  .people-desc-sliders > button {
     border: 0.1px solid var(--brightRed);
     border-radius: 50%;
     padding: 0.2rem;
+    margin: 0 0.2rem;
+    cursor: pointer;
   }
 
   .active-slide {
